Home page updated

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+
 </head>
 <body>
-<h1>My School</h1>
-<img src="resources/img.png">
+<div class="container-fluid">
+    <div class="row" style="margin-top: 100px">
+        <div class="col-md-6 py-2 px-3 " style="text-align:  center; width: 50% ;margin:auto">
+            <h1 class=" text-success
+        ">My School</h1>
+            <img class="border-success img-thumbnail" src="resources/img.png">
+        </div>
+    </div>
+</div>
+
 </body>
+<script src="js/bootstrap.js"></script>
+<script src="js/jQuery.min.js"></script>
+<script src="js/popper.js"></script>
 </html>
